tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/bool/wrong-case-false.stderr
TOML parse error at line 1, column 5
  |
1 | b = FALSE
  |     ^
invalid string
expected `"`, `'`
